Мои первые изменения

--- a/olga.html
+++ b/olga.html
@@ -8,6 +8,8 @@
     <title>Работа с Git</title>
 </head>
 <body>
-   <p>Git+GitHub</p> 
+   <p>Git+GitHub</p>
+   <h2>Привет</h2> 
+   <p>Lorem20</p>
 </body>
 </html>
